--- a/templates/layouts/layout.html.tt
+++ b/templates/layouts/layout.html.tt
@@ -25,9 +25,7 @@
         <header>
 
           <hgroup class="vevent">
-            <a href="/edoardo/wedding">
-              <h1 class="summary">[% h.l('Margaux and Edoardo') %]</h1>
-            </a>
+            <h1 class="summary"><a href="/edoardo/wedding">[% h.l('Margaux and Edoardo') %]</a></h1>
             <h2><time datetime="2011-09-30" class="dtstart" title="2011-09-30">[% h.l('30 September 2011') %]</time></h2>
           </hgroup>
 
