Fixed a few validation errors, escaping & in URLs.

--- a/templates/information.html.tt
+++ b/templates/information.html.tt
@@ -47,7 +47,7 @@
 
   <h2>Italy</h2>
   <p>You can get it from the local office of the Motorizzazione Civile.</p>
-  <p>Read more on this <a href="http://www.aci.it/viaggia-con-noi/per-viaggiare/patente-internazionale.html">page</a> of the <a href="http://www.aci.it/"><abbr title="Automobile Club Italia">ACI</abbr></a> website and on the <a href="http://www.mit.gov.it/mit/site.php?p=cm&o=vd&id=308#4">Ministero delle infrastrutture e trasporti</a> website.</p>
+  <p>Read more on this <a href="http://www.aci.it/viaggia-con-noi/per-viaggiare/patente-internazionale.html">page</a> of the <a href="http://www.aci.it/"><abbr title="Automobile Club Italia">ACI</abbr></a> website and on the <a href="http://www.mit.gov.it/mit/site.php?p=cm&amp;o=vd&amp;id=308#4">Ministero delle infrastrutture e trasporti</a> website.</p>
 
   <h2>Norway</h2>
   <p>You can get it very easily at <a href="http://www.kna.no/"><abbr title="Kongelig Norge Automobilklub">KNA</abbr></a>.</p>
