--- a/templates/index.html.tt
+++ b/templates/index.html.tt
@@ -1,4 +1,13 @@
-[% WRAPPER layouts/layout.html.tt %]
+[% WRAPPER layouts/layout.html.tt
+   css = [
+     'jquery.lightbox-0.5.css'
+   ];
+   js = [
+     'lib/jquery-1.5.1.min.js',
+     'lib/jquery.lightbox-0.5.pack.js',
+     'site.js'
+   ];
+%]
 
         <section id="wedding">
           <h1>[% h.l('Wedding') %]</h1>
@@ -73,8 +82,7 @@
           <a class="email" href="mailto:&#109;&#97;&#114;&#103;&#97;&#117;&#120;&#108;&#97;&#109;&#111;&#110;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#109;&#97;&#114;&#103;&#97;&#117;&#120;&#108;&#97;&#109;&#111;&#110;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a>
           <div class="tel"><span class="type">Cell</span>: &#43;&#52;&#55;&#32;&#57;&#54;&#32;&#56;&#51;&#32;&#57;&#50;&#32;&#49;&#55;</div>
           <a href="/edoardo/wedding/vcf/margaux.vcf" title="Download the business card">Download vCard</a><br />
-          <a href="/edoardo/wedding/png/margaux-datamatrix.png" id="margaux-qcode" title="Scan the barcode with your phone's camera">Add to your mobile phone</a>
-          <!--<img src="/edoardo/wedding/png/margaux-datamatrix.png" alt="Margaux's vCard barcode" title="Save the contact details on your phone by scanning the barcode" />-->
+          <a href="/edoardo/wedding/png/margaux-datamatrix.png" title="Scan the barcode with your phone's camera">Add to your mobile phone</a>
          </article>
 
          <article id="hcard-Edoardo-Romeo-Sabadelli" class="vcard">
@@ -84,9 +92,7 @@
           <a class="email" href="mailto:&#101;&#100;&#111;&#97;&#114;&#100;&#111;&#64;&#115;&#97;&#98;&#97;&#100;&#101;&#108;&#108;&#105;&#46;&#105;&#116;">&#101;&#100;&#111;&#97;&#114;&#100;&#111;&#64;&#115;&#97;&#98;&#97;&#100;&#101;&#108;&#108;&#105;&#46;&#105;&#116;</a>
           <div class="tel"><span class="type">Cell</span>: &#43;&#52;&#55;&#32;&#52;&#49;&#32;&#48;&#49;&#32;&#56;&#57;&#32;&#53;&#57;</div>
           <a href="/edoardo/wedding/vcf/edoardo.vcf" title="Download the business card">Download vCard</a><br />
-          <a href="/edoardo/wedding/png/edoardo-datamatrix.png" id="edoardo-qcode" title="Scan the barcode with your phone's camera">Add to your mobile phone</a>
-          <!-- DataMatrix barcode -->
-          <!--<img src="/edoardo/wedding/png/edoardo-datamatrix.png" alt="Edoardo's vCard barcode" title="Save the contact details on your phone by scanning the barcode" />-->
+          <a href="/edoardo/wedding/png/edoardo-datamatrix.png" title="Scan the barcode with your phone's camera">Add to your mobile phone</a>
          </article>
         </section>
 
