--- a/templates/layouts/layout.html.tt
+++ b/templates/layouts/layout.html.tt
@@ -52,6 +52,20 @@
     <script src="/edoardo/wedding/js/[% file %]"></script>
     [%- END %]
 
+    [%- IF app.mode == 'production' %]
+    <!-- Google Analytics code -->
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-323903-8']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+    [%- END %]
   </body>
   
 </html>
