It works both ways, but for consistency sake use www.

--- a/templates/information.html.tt
+++ b/templates/information.html.tt
@@ -39,7 +39,7 @@
               <li><a href="http://www.sa-venues.com/visit/thegardenvilla/">The Garden Villa</a>: a luxury place of tranquillity, a graceful Cape-Dutch homestead right at the foot of the Outeniqua mountains.
             </ul>
             <p>All these are very close to the wedding venue, but there are many other possibilities in George and its surroundings.</p>
-            <p>Tramonto also offers accommodation at their <a href="http://tramonto-venue.co.za/the_guesthouse.html">Guesthouse</a>.</p>
+            <p>Tramonto also offers accommodation at their <a href="http://www.tramonto-venue.co.za/the_guesthouse.html">Guesthouse</a>.</p>
           </article>
         </section>
 
